commit and push, 1817, 2/28/2023

--- a/content/rpn_sppa.qmd
+++ b/content/rpn_sppa.qmd
@@ -281,9 +281,9 @@ The test statistic suggests highly a non-random point pattern at the scale of th
 
 ## Ripley's K function:
 
- - Second-order point pattern analyses can readily be implemented in 'spatstat'.
- - Ripley's K and the standard L functions
- - Ignore edge effects with '(correction = "none")'
+-   Second-order point pattern analyses can readily be implemented in 'spatstat'.
+-   Ripley's K and the standard L functions
+-   Ignore edge effects with '(correction = "none")'
 
 ### Southeast - Vaihu
 
@@ -291,13 +291,13 @@ The test statistic suggests highly a non-random point pattern at the scale of th
 K_none_vhu <- Kest(vhu_corals, rmax = 5.0, correction = "none")
 ```
 
- - Plot K
+-   Plot K
 
 ```{r}
 plot(K_none_vhu, legend = F, main = "Southeast: Ripley's K")
 ```
 
- - Plot L with 1:1 expectation
+-   Plot L with 1:1 expectation
 
 ```{r}
 L_none_vhu <- Lest(vhu_corals, rmax = 5.0, correction = "none")
@@ -307,20 +307,15 @@ L_none_vhu <- Lest(vhu_corals, rmax = 5.0, correction = "none")
 plot(L_none_vhu, legend = F, main = "Southeast: standardized L function (standardized 1:1)")
 ```
 
- - Plot L with 0 expectation
- 
+-   Plot L with 0 expectation
+
 ```{r}
 plot(L_none_vhu, . - r ~ r, legend = F, main = "Southeast: standardized L function (standardized 0)")
 ```
 
-The above analysis ignores the problem of edge effects. `spatstat` provides a variety of
-edge corrections. Contrast an (1) isotropic and (2) translate correction for 
-adjusting for boundary effects. The isotropic correction uses a simple weighting for 
-the area sampled near the plot boundary (Ripley 1988), the translate correction uses 
-a toroidal shift. We adjust for potential boundary effects
-by typing:
+The above analysis ignores the problem of edge effects. `spatstat` provides a variety of edge corrections. Contrast an (1) isotropic and (2) translate correction for adjusting for boundary effects. The isotropic correction uses a simple weighting for the area sampled near the plot boundary (Ripley 1988), the translate correction uses a toroidal shift. We adjust for potential boundary effects by typing:
 
- - Isotropic edge correction
+-   Isotropic edge correction
 
 ```{r}
 L_iso_vhu <- Lest(vhu_corals, rmax = 5.0, correction = "isotropic")
@@ -330,15 +325,36 @@ L_iso_vhu <- Lest(vhu_corals, rmax = 5.0, correction = "isotropic")
 plot(L_iso_vhu, . - r ~ r, legend = F, main = "Southeast: standardzied L (isotropic correction)")
 ```
 
- - Translate (toroidal) edge correction
+-   Translate (toroidal) edge correction
 
 ```{r}
 L_trans_vhu <- Lest(vhu_corals, rmax = 5.0, correction = "trans")
 ```
 
-
 ```{r}
 plot(L_trans_vhu, . - r ~ r, legend = F, main = "Southeast: standardzied L (translate correction)")
+```
+
+## Monte Carlo simulations to calculate a global and pointwise confidence envelope under CSR
+
+```{r}
+L_csr_vhu <- envelope(vhu_corals, rmax = 5.0, Lest, nsim = 99, rank = 1, correction = "trans", global = F)
+```
+
+```{r}
+L_csr.g_vhu <- envelope(vhu_corals, rmax = 5.0, Lest, nsim = 99, rank = 1, correction = "trans", global = T)
+```
+
+ - Plot point-wise envelope
+
+```{r}
+plot(L_csr_vhu, . - r ~ r, shade = c("hi", "lo"), legend = F, main = "Southeast: stand. L (Monte Carlo, CSR env)")
+```
+
+ - Plot global envelope
+
+```{r}
+plot(L_csr.g_vhu, . - r ~ r, shade = c("hi", "lo"), legend = F, main = "Southeast: stand. L (Monte Carlo, CSR env)")
 ```
 
 ### West - Manavai
@@ -347,13 +363,13 @@ plot(L_trans_vhu, . - r ~ r, legend = F, main = "Southeast: standardzied L (tran
 K_none_man <- Kest(man_corals, rmax = 5.0, correction = "none")
 ```
 
- - Plot K
+-   Plot K
 
 ```{r}
 plot(K_none_man, legend = F, main = "West: Ripley's K")
 ```
 
- - Plot L with 1:1 expectation
+-   Plot L with 1:1 expectation
 
 ```{r}
 L_none_man <- Lest(man_corals, rmax = 5.0, correction = "none")
@@ -363,20 +379,15 @@ L_none_man <- Lest(man_corals, rmax = 5.0, correction = "none")
 plot(L_none_man, legend = F, main = "West: standardized L function (standardized 1:1)")
 ```
 
- - Plot L with 0 expectation
- 
+-   Plot L with 0 expectation
+
 ```{r}
 plot(L_none_man, . - r ~ r, legend = F, main = "West: standardized L function (standardized 0)")
 ```
 
-The above analysis ignores the problem of edge effects. `spatstat` provides a variety of
-edge corrections. Contrast an (1) isotropic and (2) translate correction for 
-adjusting for boundary effects. The isotropic correction uses a simple weighting for 
-the area sampled near the plot boundary (Ripley 1988), the translate correction uses 
-a toroidal shift. We adjust for potential boundary effects
-by typing:
+The above analysis ignores the problem of edge effects. `spatstat` provides a variety of edge corrections. Contrast an (1) isotropic and (2) translate correction for adjusting for boundary effects. The isotropic correction uses a simple weighting for the area sampled near the plot boundary (Ripley 1988), the translate correction uses a toroidal shift. We adjust for potential boundary effects by typing:
 
- - Isotropic edge correction
+-   Isotropic edge correction
 
 ```{r}
 L_iso_man <- Lest(man_corals, rmax = 5.0, correction = "isotropic")
@@ -386,12 +397,11 @@ L_iso_man <- Lest(man_corals, rmax = 5.0, correction = "isotropic")
 plot(L_iso_man, . - r ~ r, legend = F, main = "West: standardzied L (isotropic correction)")
 ```
 
- - Translate (toroidal) edge correction
+-   Translate (toroidal) edge correction
 
 ```{r}
 L_trans_man <- Lest(man_corals, rmax = 5.0, correction = "trans")
 ```
-
 
 ```{r}
 plot(L_trans_man, . - r ~ r, legend = F, main = "West: standardzied L (translate correction)")
@@ -403,13 +413,13 @@ plot(L_trans_man, . - r ~ r, legend = F, main = "West: standardzied L (translate
 K_none_ana <- Kest(ana_corals, rmax = 5.0, correction = "none")
 ```
 
- - Plot K
+-   Plot K
 
 ```{r}
 plot(K_none_ana, legend = F, main = "North: Ripley's K")
 ```
 
- - Plot L with 1:1 expectation
+-   Plot L with 1:1 expectation
 
 ```{r}
 L_none_ana <- Lest(ana_corals, rmax = 5.0, correction = "none")
@@ -419,20 +429,15 @@ L_none_ana <- Lest(ana_corals, rmax = 5.0, correction = "none")
 plot(L_none_ana, legend = F, main = "North: standardized L function (standardized 1:1)")
 ```
 
- - Plot L with 0 expectation
- 
+-   Plot L with 0 expectation
+
 ```{r}
 plot(L_none_ana, . - r ~ r, legend = F, main = "North: standardized L function (standardized 0)")
 ```
 
-The above analysis ignores the problem of edge effects. `spatstat` provides a variety of
-edge corrections. Contrast an (1) isotropic and (2) translate correction for 
-adjusting for boundary effects. The isotropic correction uses a simple weighting for 
-the area sampled near the plot boundary (Ripley 1988), the translate correction uses 
-a toroidal shift. We adjust for potential boundary effects
-by typing:
+The above analysis ignores the problem of edge effects. `spatstat` provides a variety of edge corrections. Contrast an (1) isotropic and (2) translate correction for adjusting for boundary effects. The isotropic correction uses a simple weighting for the area sampled near the plot boundary (Ripley 1988), the translate correction uses a toroidal shift. We adjust for potential boundary effects by typing:
 
- - Isotropic edge correction
+-   Isotropic edge correction
 
 ```{r}
 L_iso_ana <- Lest(ana_corals, rmax = 5.0, correction = "isotropic")
@@ -442,7 +447,7 @@ L_iso_ana <- Lest(ana_corals, rmax = 5.0, correction = "isotropic")
 plot(L_iso_ana, . - r ~ r, legend = F, main = "North: standardzied L (isotropic correction)")
 ```
 
- - Translate (toroidal) edge correction
+-   Translate (toroidal) edge correction
 
 ```{r}
 L_trans_ana <- Lest(ana_corals, rmax = 5.0, correction = "trans")
@@ -452,26 +457,43 @@ L_trans_ana <- Lest(ana_corals, rmax = 5.0, correction = "trans")
 plot(L_trans_ana, . - r ~ r, legend = F, main = "North: standardzied L (translate correction)")
 ```
 
-For the functions above, two lines are drawn. The $L_{pois}$ line
-is a dashed line that represents the expected (theoretical) 
-value based on a Poisson process (CSR). The way that `spatstat` calculates $L$ is to 
-linearize $K$ such that the expected value is $r$ (or the radius). The other solid line
-represents the estimated $L$ (linearized $K$), when the edges are ignored.
+For the functions above, two lines are drawn. The $L_{pois}$ line is a dashed line that represents the expected (theoretical) value based on a Poisson process (CSR). The way that `spatstat` calculates $L$ is to linearize $K$ such that the expected value is $r$ (or the radius). The other solid line represents the estimated $L$ (linearized $K$), when the edges are ignored.
 
-When comparing the $L$ function that ignores boundaries to those above that account
-for boundaries, notice that patterns change at larger distances - we expect that the $L$ 
-function at larger distances should potentially be more biased than at smaller distances 
-because larger radii will naturally overlap more with the boundary of the study area. 
+When comparing the $L$ function that ignores boundaries to those above that account for boundaries, notice that patterns change at larger distances - we expect that the $L$ function at larger distances should potentially be more biased than at smaller distances because larger radii will naturally overlap more with the boundary of the study area.
 
-When edge effects are ignored, the effect in the of counting fewer points within the 
-radius $r$ near the boundary, so the observed value for $L$ or $K$ should have an artifact of 
-decreasing as $r$ increases.
+When edge effects are ignored, the effect in the of counting fewer points within the radius $r$ near the boundary, so the observed value for $L$ or $K$ should have an artifact of decreasing as $r$ increases.
 
-The analyses so far are exploratory. While the observed statistics ($K$, $L$) appear different 
-than the expectation, it is unclear if these are substantially (or significantly) different.
+The analyses so far are exploratory. While the observed statistics ($K$, $L$) appear different than the expectation, it is unclear if these are substantially (or significantly) different.
 
-To conduct formal inference regarding if the point pattern follows CSR, we can use Monte Carlo
-simulations ro calculate a confidence envelope under CSR with the `envelope` function.
+To conduct formal inference regarding if the point pattern follows CSR, we can use Monte Carlo simulations ro calculate a confidence envelope under CSR with the `envelope` function.
+
+In the `envelope` function, rank specifies the alpha for the simulations.
+For a *rank = 1*, the max an min are used as the envelopes, such that for **99 simulations, alpha = 0.01** while for **19 simulations, alpha = 0.05**. 
+
+Also not that we used `global = FALSE`. This means that these are *pointwise envelopes*.
+
+These envelopes work better for $L$ than $K$ because of variance stabilizing properties.
+
+Plots of pointwise envelopes show the stated upper and lower quantiles of simulated patterns for any distance r. Because such analyses are calculating envelopes for vhuy distances, pointwise envelopes with a specified alpha should not be used to reject a null model at that level (because of the multiple tests). Consequently, there are alternative global tests that can be used in this way. While global tests are under active development (Baddeley et al. 2014; Wiegand et al. 2016), `spatstat` does provide one option for a global test (using global = T). 
+
+This approach estimates the maximum deviation from the Poisson point process across all r (i.e., $D = max|K_{(r)} - K_{pois(r)}|)$. This approach is referred to as a simultaneous envelope (or critical band) rather than a pointwise envelope. 
+
+If the observed line falls outside the simultaneous envelope at any point on $r$, we would reject the null hypothesis.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
