--- a/content/dispersion_presentation.qmd
+++ b/content/dispersion_presentation.qmd
@@ -81,6 +81,20 @@ Main Caption
 ------------------------------------------------------------------------
 
 ::: columns
+
+::: {.column width="50%"}
+![](rpn_wave_fig_c.png){.absolute top="10" right="10" width="400" height="300"}
+
+::: {.column width="50%"}
+![](rpn_poci_percent_cover_2016.png){.absolute top="10" left="0" width="375" height="325"}
+:::
+
+:::
+:::
+
+------------------------------------------------------------------------
+
+::: columns
 ::: {.column width="40%"}
 ![](poci_size_hist.png){.absolute top="0" left="0" width="375" height="350"}
 :::
